tests/fail/fail_undeclared.bb
<> Should fail with undeclared variable.

x = 5
